[package]
name = "bevy_rollback"
version = "0.0.4-alpha"
authors = ["James <jamescarterbell@gmail.com>"]
edition = "2018"
description = "A rollback library for the Bevy game engine."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jamescarterbell/bevy_rollback"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6.4"
bevy = "0.5"

[dev-dependencies]
serde = {version = "1.0.126", features = ["derive"]}